--- a/Veda-bookStore/Veda-bookStore/Views/Shared/_Layout.cshtml
+++ b/Veda-bookStore/Veda-bookStore/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/home/contactus">Contact</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/book/getallbooks">All Books</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -45,5 +48,10 @@
     <main role="main">
         @RenderBody()
     </main>
+    <footer class="border-top footer text-muted text-center">
+        <div class="container">
+            Copyright  &copy; Book Store @DateTime.Now.Year
+        </div>
+    </footer>
 </body>
 </html>
